# HW_31

./: .gitignore  csv_to_json.py  docker-compose.yml  manage.py  pyproject.toml  pytest.ini  readme.md
HW_31/: asgi.py  settings.py  urls.py  wsgi.py
ad/: admin.py  apps.py  models.py  permissions.py  serializers.py  urls.py  views.py
ad/migrations/: 0001_initial.py  0002_initial.py
category/: models.py  serializers.py  urls.py  views.py
category/migrations/: 0001_initial.py
fixtures/: ad.json  category.json  location.json  user.json
tests/: conftest.py  factories.py  fixtures.py
tests/ad/: ad_create_test.py  ad_list_test.py  ad_retrieve_test.py  selection_create_test.py
user/: admin.py  models.py  serializers.py  urls.py  views.py
user/migrations/: 0001_initial.py
